--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <div id="key-zone"></div>
         <div id="keys"></div>
     </div>
-
+    
+    <audio id="hit-sound" src="hit.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
